--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -612,8 +612,8 @@
                       visible_area: "100%"
                   },
                   responsiveLevels: [1240, 1024, 778, 480],
-                  gridwidth: [1240, 1024, 778, 480],
-                  gridheight: [600, 600, 500, 800],
+                  gridwidth: [1240, 1024, 778, 480,320],
+                  gridheight: [600, 600, 500, 800, 800],
                   lazyType: "all",
                   parallax: {
                       type: "mouse",
