--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -86,7 +86,10 @@
 	}
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px){
-
+.index-1 {
+ 
+    padding-top: 250px;
+}
 }
     </style>
 	{% endif %}
