--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -164,8 +164,61 @@
    
 
            
+  {% if app.request.locale == 'ar' %}
+     <li data-index="rs-2" data-slotamount="2"    data-saveperformance="off" data-title="" data-description="">
+                        <!-- MAIN IMAGE -->
+                        <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
+                      
+                        <!-- LAYERS -->
 
-                                    
+
+                           <div class="tp-caption Gym-Display tp-resizeme " id="slide-2-layer-2" data-x="['150','-50','-50','-10']" data-y="['50','-80','-80','-30']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('p2.svg')}}" class="pack"> 
+                         
+                          </div>
+                      
+                
+                 
+                        <h2 class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['-30','-30','-30','-30']" data-y="['0','-50','-50','290']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">{{'LE PACKK'|trans}}
+                        </h2>
+
+                        <h3 class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','310']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;"> {{'SITE VITRINE'|trans}}
+                        </h3>
+
+                         <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['120','-20','-20','340']" data-voffset="['0','0','0','0']" data-fontsize="['20','20','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;"> {{'pour une vitrine sur le web'|trans}}
+                        </p>
+                  
+                     
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['190','-20','-20','400']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="100%" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200; max-width:600px !important;  min-width:444px !important;width:400px !important;     line-height: 30px;"> {{'Nom de domaine et hébergement INCLUT'|trans}}  
+                        </p>
+
+               
+
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['200','-20','-20','410']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'5 pages web'|trans}} 
+                        </p>
+
+
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['230','-20','-20','440']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'5 Adresses mail'|trans}}
+                        </p>
+
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['260','-20','-20','470']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'Structure web personnalisée'|trans}}
+                        </p>
+                        
+                         <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['290','-20','-20','500']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'Version mobile'|trans}}
+                        </p>
+
+                
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['320','-20','-20','530']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'Statistiques'|trans}}
+                        </p>
+
+                         <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['350','-20','-20','570']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">{{'PRIX2'|trans}}
+                        </p>
+
+                        <p class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['500','70','70','720']" data-voffset="['0','0','0','0']" data-fontsize="['17','17','17','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 400; margin-top:0px;width: 100%;    line-height: 20px; "> <span style="background: white;color:#c49800; padding: 15px;    display: block; text-align:center;    line-height: 20px;">{{'Commander'|trans}}  </span> 
+                        </p>
+                     
+                    </li>
+                                      {% else %}
                     <li data-index="rs-2" data-slotamount="2"    data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
@@ -219,7 +272,7 @@
                         </p>
                      
                     </li>
-
+  {% endif %}
                                          
                    <li data-index="rs-3" data-slotamount="3"  data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
